--- a/src/app/components/details/mount-detail/mount-detail.component.scss
+++ b/src/app/components/details/mount-detail/mount-detail.component.scss
@@ -1,149 +1,132 @@
 .remote-details {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+
+  .remote-header {
+    padding-top: 20px;
     display: flex;
-    width: 100%;
+    gap: 10px;
     flex-direction: column;
     align-items: center;
-    flex: 1;
-  
-    .remote-header {
-      padding-top: 20px;
-      display: flex;
-      gap: 10px;
-      flex-direction: column;
-      align-items: center;
 
-      h2 {
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          max-width: 50vw;
-          display: block;
-      }
+    h2 {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 50vw;
+      display: block;
     }
-  
-    p {
-      font-size: 20px;
+  }
+
+  p {
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: #8c8888;
+  }
+
+  .info-card {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    border-radius: 8px;
+    padding-block: 20px;
+    width: 84%;
+
+    h3 {
       display: flex;
       align-items: center;
-      gap: 5px;
-      color: #8C8888;
+      gap: 10px;
+      margin-bottom: 10px;
     }
-  
-    .info-card {
+
+    .info-card-content {
       display: flex;
       flex-direction: column;
-      align-items: baseline;
+      gap: 20px;
+      width: 100%;
+      padding-block: 10px;
       border-radius: 8px;
-      padding-block: 20px;
-      width: 84%;
-  
-      h3 {
+
+      .disk-usage {
         display: flex;
         align-items: center;
-        gap: 10px;
-        margin-bottom: 10px;
-      }
-  
-      .info-card-content {
-        display: flex;
         flex-direction: column;
-        gap: 20px;
-        width: 100%;
-        padding-block: 10px;
-        border-radius: 8px;
-  
-        .disk-usage {
+        padding-inline: 10px;
+        gap: 10px;
+
+        .disk-usage-bar {
+          width: 100%;
+          height: 4.5vh;
+          min-height: 38px;
+          border-radius: 18px;
+          position: relative;
+          overflow: hidden;
           display: flex;
           align-items: center;
-          flex-direction: column;
-          padding-inline: 10px;
-          gap: 10px;
-  
-          .disk-usage-bar {
-            border: 3px solid #70caf2; /* Blue border */
-            background-color: #cecece; /* Free space color */
-            width: 100%;
-            height: 4.5vh;
-            min-height: 38px;
-            border-radius: 18px;
-            position: relative;
-            overflow: hidden;
-          }
-  
-          .usage {
-            height: 100%;
-            background-color: var(--orange); /* Used space color */
-            transition: width 0.5s ease-in-out;
-          }
-  
+          justify-content: start;
+          transition: all 0.5s ease-in-out; // important for smooth color changes
+
           p {
-            background-color: var(--purple);
-            height: 100%;
+            color: white;
+            font-weight: bold;
             width: 100%;
-            display: flex;
+            text-align: center;
+            align-self: center;
             justify-content: center;
-  
-            color: white; /* Unmounted bar text color */
-          }
-  
-          .not-mounted-bar {
-            border: none !important;
-            transition: width 0.5s ease-in-out;
-  
-            p {
-              background-color: var(--purple);
-            }
-          }
-  
-          /* When Remote has an Error */
-          .error-bar {
-            border: none !important;
-            transition: width 0.5s ease-in-out;
-  
-            p {
-              background-color: var(--red);
-            }
-          }
-  
-          .legend {
-            display: flex;
-            gap: 15px;
-            margin-top: 10px;
-          }
-  
-          .legend-item {
-            display: flex;
-            align-items: center;
-            font-size: 14px;
-          }
-  
-          .color-box {
-            width: 20px;
-            height: 20px;
-            border-radius: 5px;
-            display: inline-block;
-            margin-right: 5px;
-          }
-  
-          .used {
-            background-color: var(--orange);
-          }
-  
-          .free {
-            background-color: #cecece;
-          }
-  
-          .border {
-            background-color: #70caf2;
+            transition: background-color 0.5s ease-in-out;
           }
         }
-  
-        .button-container {
+
+        .usage {
+          height: 100%;
+          border: 0px;
+          background-color: var(--orange);
+          transition: width 0.5s ease-in-out;
+        }
+
+        .legend {
           display: flex;
-          justify-content: space-evenly;
-          gap: 10px;
+          gap: 15px;
+          margin-top: 10px;
         }
+
+        .legend-item {
+          display: flex;
+          align-items: center;
+          font-size: 14px;
+        }
+
+        .color-box {
+          width: 20px;
+          height: 20px;
+          border-radius: 5px;
+          display: inline-block;
+          margin-right: 5px;
+        }
+
+        .used {
+          background-color: var(--orange);
+        }
+
+        .free {
+          background-color: #cecece;
+        }
+
+        .border {
+          background-color: #70caf2;
+        }
+      }
+
+      .button-container {
+        display: flex;
+        justify-content: space-evenly;
+        gap: 10px;
       }
     }
   }
-  
+}
